# Personalized_Flaskr

./: .coverage  .gitignore  Pipfile  pyproject.toml  setup.py
flaskr/: __init__.py  api.py  auth.py  blog.py  db.py  post_affinity.py  prac.py  schema.sql
flaskr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/blog/: index.html
frontend/: .gitignore
frontend/src/: App.js
frontend/src/components/: Post.css  Post.js
instance/: flaskr.sqlite
